# tree-sitter-luau-fork

./: .gitattributes  .gitignore  .npmignore  Cargo.toml  LICENSE  Package.swift  README.md  binding.gyp  eslint.config.js  grammar.js  package-lock.json  package.json  parser.exp  parser.lib  test.luau
.github/workflows/: ci.yml  lint.yml  publish.yml  release.yml
bindings/node/: binding.cc  index.js
bindings/rust/: build.rs  lib.rs
bindings/swift/: luau.h
queries/: folds.scm  highlights.scm  indents.scm  injections.scm  locals.scm
script/: parse-example
src/: grammar.json  parser.c  scanner.c
