[package]
name = "tree-sitter-luau-fork"
description = "luau grammar for the tree-sitter parsing library (fork from tree-sitter-grammars/tree-sitter-luau-fork)"
version = "0.1.0"
keywords = ["incremental", "parsing", "luau"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/tree-sitters/tree-sitter-luau-fork"
edition = "2021"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = ">=0.21.0"

[build-dependencies]
cc = "1.0"
